# WPPiWC

./: .gitignore  CMakeLists.txt  main.cpp  readme.md
lib/: CMakeLists.txt
lib/SimCore/: CMakeLists.txt
lib/SimCore/headers/: TestingClass.h
lib/SimCore/source/: TestingClass.cpp
